# HandwritingRecognition

./: .gitignore  CMakeLists.txt  CMakePresets.json  HandwritingRecognition.pro  LICENSE  README.md  generate_report.bat  restructure_models.ps1  run_digit_recog.bat  run_handwriting_recog.bat
.agents/skills/mnist-handwriting-recognition/: SKILL.md
.agents/skills/qt-cpp/: SKILL.md
artifacts/models/: mnist_model.pt  model.pth
document/: airwriting.md  airwriting_extension.md  build.md  build_difference.md  build_workflow.md  device.md  document.md  document2.md  environment.txt  existed_report.md  experiment_report.md  file_inventory.md  files.md  innovation.md  model.md  new_report.docx  new_report.md  opencv.md  plan.md  powershell.md  preprocessing.md  python.md  report.md  requirements.txt  run.md
scripts/: deploy_qt_creator_build.ps1  hand_tracker_service.py  package_release.ps1  prepare_libtorch_cuda.ps1  train_mnist.py
scripts/project_operation/: clean_project.ps1  export_test_images.py
src/: airwritecontroller.cpp  airwritecontroller.h  canvas.cpp  canvas.h  main.cpp  mainwindow.cpp  mainwindow.h  recognizer.cpp  recognizer.h
src/opencv2/: core.hpp  imgproc.hpp
